# Excel_to_KML

./: .gitignore  2.5 Татьянка.xlsx  2.5 Черная.xlsx  2.5 Черновка.xlsx  2.5 Черновское.xlsx  DOCS.md  README.md  coordLine_To_MultiLine.py  main.py  mggt_to_wgs.py  output.kml  pyproject.toml  requirements.txt  separate_into_files.py  separator.py  unittests.py  utils.py  xlsx_to_kml.py
data/: objects_info.json  objects_info.yaml  proj4.json  proj4.txt
docs/: DOCS.md  Improvements.md
input/: processing_history.json  test_object.txt  ИЗМ 2.5.xlsx  Истра_Миронцево.xlsx  Москва (с ошибками).xlsx  Москва.xlsx  Москва_fixed.xlsx
map_uploader/: uploader.py
src/: config.py  debug_parser.py  main.py  processing.py  separator.py  stats.py  ui.py  utils.py  workers.py  xlsx_to_kml.py
src/xlsx_to_kml/: __init__.py  anomalies.py  io_excel.py  io_kml.py  models.py  parsing.py  pipeline.py  projections.py
tests/: unittests.py
