[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-to-kml-converter"
version = "1.0.0"
description = "Convert Excel files with water object data to KML format"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3", 
    "pyproj>=3.7.0",
    "simplekml>=1.3.6",
    "rich",
    "click",
    "colorlog",

]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."